--- a/gather/css/main_mobile.less
+++ b/gather/css/main_mobile.less
@@ -468,17 +468,17 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
                 border: 1px solid #f00;
               }
               .small-tag{
-                background: #f00;
+                background: #FFC600;
                 .lessRem(border-radius, 15);
                 .lessRem(width, 30);
                 .lessRem(height, 30);
                 .lessRem(line-height, 30);
-                .lessRem(font-size,12);
+                .lessRem(font-size,15);
                 color: #fff;
                 text-align: center;
                 position: absolute;
                 bottom: 0;
-                .lessRem(right, -5);
+                .lessRem(right, -10);
               }
             }
             .avatar-container-orange{
@@ -494,17 +494,17 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
                 border: 1px solid #FA7527;
               }
               .small-tag{
-                background: #FA7527;
+                background: #FFC600;
                 .lessRem(border-radius, 15);
                 .lessRem(width, 30);
                 .lessRem(height, 30);
                 .lessRem(line-height, 30);
-                .lessRem(font-size,12);
+                .lessRem(font-size,15);
                 color: #fff;
                 text-align: center;
                 position: absolute;
                 bottom: 0;
-                .lessRem(right, -5);
+                .lessRem(right, -10);
               }
             }
             .avatar-container-yellow{
@@ -525,12 +525,12 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
                 .lessRem(width, 30);
                 .lessRem(height, 30);
                 .lessRem(line-height, 30);
-                .lessRem(font-size,12);
+                .lessRem(font-size,15);
                 color: #fff;
                 text-align: center;
                 position: absolute;
                 bottom: 0;
-                .lessRem(right, -5);
+                .lessRem(right, -10);
               }
             }
             .avatar-container-gray{
@@ -551,7 +551,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
                 .lessRem(width, 30);
                 .lessRem(height, 30);
                 .lessRem(line-height, 30);
-                .lessRem(font-size,15);
+                .lessRem(font-size,20);
                 color: #fff;
                 text-align: center;
                 position: absolute;
