--- a/gather/css/main_pc.css
+++ b/gather/css/main_pc.css
@@ -378,17 +378,17 @@ textarea:-ms-input-placeholder {
   border: 1px solid #f00;
 }
 .main .swiper-container .swiper-slide .rank .rank-item .left .avatar-container-red .small-tag {
-  background: #f00;
+  background: #FFC600;
   border-radius: 0.2rem;
   width: 0.4rem;
   height: 0.4rem;
   line-height: 0.4rem;
-  font-size: 0.16rem;
+  font-size: 0.2rem;
   color: #fff;
   text-align: center;
   position: absolute;
   bottom: 0;
-  right: -0.06666667rem;
+  right: -0.13333333rem;
 }
 .main .swiper-container .swiper-slide .rank .rank-item .left .avatar-container-orange {
   position: relative;
@@ -409,17 +409,17 @@ textarea:-ms-input-placeholder {
   border: 1px solid #FA7527;
 }
 .main .swiper-container .swiper-slide .rank .rank-item .left .avatar-container-orange .small-tag {
-  background: #FA7527;
+  background: #FFC600;
   border-radius: 0.2rem;
   width: 0.4rem;
   height: 0.4rem;
   line-height: 0.4rem;
-  font-size: 0.16rem;
+  font-size: 0.2rem;
   color: #fff;
   text-align: center;
   position: absolute;
   bottom: 0;
-  right: -0.06666667rem;
+  right: -0.13333333rem;
 }
 .main .swiper-container .swiper-slide .rank .rank-item .left .avatar-container-yellow {
   position: relative;
@@ -445,12 +445,12 @@ textarea:-ms-input-placeholder {
   width: 0.4rem;
   height: 0.4rem;
   line-height: 0.4rem;
-  font-size: 0.16rem;
+  font-size: 0.2rem;
   color: #fff;
   text-align: center;
   position: absolute;
   bottom: 0;
-  right: -0.06666667rem;
+  right: -0.13333333rem;
 }
 .main .swiper-container .swiper-slide .rank .rank-item .left .avatar-container-gray {
   position: relative;
@@ -476,7 +476,7 @@ textarea:-ms-input-placeholder {
   width: 0.4rem;
   height: 0.4rem;
   line-height: 0.4rem;
-  font-size: 0.2rem;
+  font-size: 0.26666667rem;
   color: #fff;
   text-align: center;
   position: absolute;
@@ -512,7 +512,7 @@ textarea:-ms-input-placeholder {
   text-align: center;
 }
 .main .swiper-container .swiper-slide .rule p {
-  color: #666666; 
+  color: #666666;
   font-size: 0.34666667rem;
   padding-top: 0.32rem;
 }
