--- a/gather/css/main_mobile.css
+++ b/gather/css/main_mobile.css
@@ -175,6 +175,12 @@ textarea:-ms-input-placeholder {
   width: 10rem;
   margin: 0 auto;
 }
+.main .yindao {
+  background: url("../img/yindao.jpg") repeat-x;
+  background-size: 100% 100%;
+  width: 100%;
+  height: 2.74666667rem;
+}
 .main .banner {
   background: url("../img/banner.png") repeat-x;
   background-size: 100% 100%;
@@ -383,12 +389,12 @@ textarea:-ms-input-placeholder {
   width: 0.4rem;
   height: 0.4rem;
   line-height: 0.4rem;
-  font-size: 0.16rem;
+  font-size: 0.26666667rem;
   color: #fff;
   text-align: center;
   position: absolute;
   bottom: 0;
-  right: -0.06666667rem;
+  right: -0.13333333rem;
 }
 .main .swiper-container .swiper-slide .rank .rank-item .left .avatar-container-orange {
   position: relative;
@@ -414,12 +420,12 @@ textarea:-ms-input-placeholder {
   width: 0.4rem;
   height: 0.4rem;
   line-height: 0.4rem;
-  font-size: 0.16rem;
+  font-size: 0.26666667rem;
   color: #fff;
   text-align: center;
   position: absolute;
   bottom: 0;
-  right: -0.06666667rem;
+  right: -0.13333333rem;
 }
 .main .swiper-container .swiper-slide .rank .rank-item .left .avatar-container-yellow {
   position: relative;
@@ -445,12 +451,12 @@ textarea:-ms-input-placeholder {
   width: 0.4rem;
   height: 0.4rem;
   line-height: 0.4rem;
-  font-size: 0.16rem;
+  font-size: 0.26666667rem;
   color: #fff;
   text-align: center;
   position: absolute;
   bottom: 0;
-  right: -0.06666667rem;
+  right: -0.13333333rem;
 }
 .main .swiper-container .swiper-slide .rank .rank-item .left .avatar-container-gray {
   position: relative;
@@ -476,7 +482,7 @@ textarea:-ms-input-placeholder {
   width: 0.4rem;
   height: 0.4rem;
   line-height: 0.4rem;
-  font-size: 0.2rem;
+  font-size: 0.26666667rem;
   color: #fff;
   text-align: center;
   position: absolute;
