--- a/gather/css/main_pc.less
+++ b/gather/css/main_pc.less
@@ -252,6 +252,14 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 .main {
   .lessRem(width, 750);
   margin: 0 auto;
+  .yindao{
+    background: url("../img/yindao.jpg") repeat-x;
+    background-size: 100% 100%;
+
+    width: 100%;
+    .lessRem(height, 206);
+    display: none;
+  }
   .banner {
     background: url("../img/banner.png") repeat-x;
     background-size: 100% 100%;
@@ -473,12 +481,12 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
                 .lessRem(width, 30);
                 .lessRem(height, 30);
                 .lessRem(line-height, 30);
-                .lessRem(font-size,12);
+                .lessRem(font-size,20);
                 color: #fff;
                 text-align: center;
                 position: absolute;
                 bottom: 0;
-                .lessRem(right, -5);
+                .lessRem(right, -10);
               }
             }
             .avatar-container-orange{
@@ -499,12 +507,12 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
                 .lessRem(width, 30);
                 .lessRem(height, 30);
                 .lessRem(line-height, 30);
-                .lessRem(font-size,12);
+                .lessRem(font-size,20);
                 color: #fff;
                 text-align: center;
                 position: absolute;
                 bottom: 0;
-                .lessRem(right, -5);
+                .lessRem(right, -10);
               }
             }
             .avatar-container-yellow{
@@ -525,12 +533,12 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
                 .lessRem(width, 30);
                 .lessRem(height, 30);
                 .lessRem(line-height, 30);
-                .lessRem(font-size,12);
+                .lessRem(font-size,20);
                 color: #fff;
                 text-align: center;
                 position: absolute;
                 bottom: 0;
-                .lessRem(right, -5);
+                .lessRem(right, -10);
               }
             }
             .avatar-container-gray{
@@ -551,7 +559,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
                 .lessRem(width, 30);
                 .lessRem(height, 30);
                 .lessRem(line-height, 30);
-                .lessRem(font-size,15);
+                .lessRem(font-size,20);
                 color: #fff;
                 text-align: center;
                 position: absolute;
